img/diary/attachment-2018-1-17-iptables-raw-trace/host_iptables.log
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050119] TRACE: raw:OUTPUT:policy:2 IN= OUT=ens33 SRC=192.168.139.135 DST=192.168.139.134 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=37478 PROTO=UDP SPT=40474 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050126] TRACE: mangle:OUTPUT:policy:1 IN= OUT=ens33 SRC=192.168.139.135 DST=192.168.139.134 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=37478 PROTO=UDP SPT=40474 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050132] TRACE: nat:OUTPUT:policy:2 IN= OUT=ens33 SRC=192.168.139.135 DST=192.168.139.134 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=37478 PROTO=UDP SPT=40474 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050136] TRACE: filter:OUTPUT:policy:1 IN= OUT=ens33 SRC=192.168.139.135 DST=192.168.139.134 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=37478 PROTO=UDP SPT=40474 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050138] TRACE: mangle:POSTROUTING:policy:1 IN= OUT=ens33 SRC=192.168.139.135 DST=192.168.139.134 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=37478 PROTO=UDP SPT=40474 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050140] TRACE: nat:POSTROUTING:policy:3 IN= OUT=ens33 SRC=192.168.139.135 DST=192.168.139.134 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=37478 PROTO=UDP SPT=40474 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050634] TRACE: raw:PREROUTING:policy:2 IN=ens33 OUT= MAC=00:0c:29:ec:d5:7c:00:0c:29:e0:9b:83:08:00 SRC=192.168.139.134 DST=192.168.139.135 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=43029 PROTO=UDP SPT=55740 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050653] TRACE: mangle:PREROUTING:policy:1 IN=ens33 OUT= MAC=00:0c:29:ec:d5:7c:00:0c:29:e0:9b:83:08:00 SRC=192.168.139.134 DST=192.168.139.135 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=43029 PROTO=UDP SPT=55740 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050659] TRACE: nat:PREROUTING:rule:1 IN=ens33 OUT= MAC=00:0c:29:ec:d5:7c:00:0c:29:e0:9b:83:08:00 SRC=192.168.139.134 DST=192.168.139.135 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=43029 PROTO=UDP SPT=55740 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050662] TRACE: nat:DOCKER:return:3 IN=ens33 OUT= MAC=00:0c:29:ec:d5:7c:00:0c:29:e0:9b:83:08:00 SRC=192.168.139.134 DST=192.168.139.135 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=43029 PROTO=UDP SPT=55740 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050664] TRACE: nat:PREROUTING:policy:2 IN=ens33 OUT= MAC=00:0c:29:ec:d5:7c:00:0c:29:e0:9b:83:08:00 SRC=192.168.139.134 DST=192.168.139.135 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=43029 PROTO=UDP SPT=55740 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050670] TRACE: mangle:INPUT:policy:1 IN=ens33 OUT= MAC=00:0c:29:ec:d5:7c:00:0c:29:e0:9b:83:08:00 SRC=192.168.139.134 DST=192.168.139.135 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=43029 PROTO=UDP SPT=55740 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050673] TRACE: filter:INPUT:policy:1 IN=ens33 OUT= MAC=00:0c:29:ec:d5:7c:00:0c:29:e0:9b:83:08:00 SRC=192.168.139.134 DST=192.168.139.135 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=43029 PROTO=UDP SPT=55740 DPT=4789 LEN=114 
Jan 19 16:15:40 ubuntu2 kernel: [ 2895.050675] TRACE: nat:INPUT:policy:1 IN=ens33 OUT= MAC=00:0c:29:ec:d5:7c:00:0c:29:e0:9b:83:08:00 SRC=192.168.139.134 DST=192.168.139.135 LEN=134 TOS=0x00 PREC=0x00 TTL=64 ID=43029 PROTO=UDP SPT=55740 DPT=4789 LEN=114
